        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

- Prefer W3C "traceparent" header over "elastic-apm-traceparent" for incoming
  requests. {pull}2079[#2079]

[float]
===== Bug fixes


[[release-notes-3.15.0]]
==== 3.15.0 - 2021/05/19

[float]
===== Features

* Add support for Node.js v16. (This also drops testing of Node.js v13
  releases.) {pull}2055[#2055]

[float]
===== Bug fixes

* Update TypeScript typings for `Agent.setLabel` and `Agent.addLabels` to
  include the `stringify` argument that was added in v3.11.0.


[[release-notes-3.14.0]]
==== 3.14.0 - 2021/04/19

[float]
===== Features

* Add `apm.addMetadataFilter(fn)` for filtering the
  https://www.elastic.co/guide/en/apm/server/current/metadata-api.html[metadata object]
  sent to APM server.

* The handling of sending events (transactions, spans, errors) to APM server
  has improved in a few ways. During temporary spikes in load and/or an APM
  server that is unresponsive, the agent will buffer a number of events and
  *drop* them above a certain limit (configurable via <<max-queue-size>>).
  This helps ensure the agent does not overly consume memory and CPU. As well,
  the agent will now https://github.com/elastic/apm/blob/master/specs/agents/transport.md#transport-errors[backoff]
  when the APM server errors. Finally, improved error handling means it will
  terminate failing requests to the APM server more quickly.
+
Note: v1 of this agent (EOL'd 2 years ago), included a `maxQueueSize` config
variable with a different meaning. If you have a lingering usage of that
setting (also possibly as the `ELASTIC_APM_MAX_QUEUE_SIZE` environment