@@ -551,7 +551,22 @@ A capture location stack trace is never generated for uncaught exceptions.
 * *Default:* `true`
 * *Env:* `ELASTIC_APM_CAPTURE_SPAN_STACK_TRACES`
 
-Set this option to `false` to disable capture of stack traces for measured spans during instrumentation.
+Set this option to `false` to disable capture of stack traces.
+
+When set to `true` the agent will capture stack traces for spans whose duration falls within the <<span-frames-min-duration, `spanFramesMinDuration`>> threshold.
+
+[[span-frames-min-duration]]
+==== `spanFramesMinDuration`
+
+* *Type:* String
+* *Default:* `10ms`
+* *Env:* `ELASTIC_APM_SPAN_FRAMES_MIN_DURATION`
+
+A time value to control whether the agent will report stack traces for measured spans. If a span's duration reaches this threshold, the agent will report stack traces. If <<capture-span-stack-traces, `captureSpanStackTraces`>> is set to `false` the agent will ignore the `spanFramesMinDuration` value.
+
+When set to `0` the agent will not record stack traces for any spans.
+
+When set to a negative value (like `-1ms`) the agent will always record stack traces for spans.
 
 [[use-path-as-transaction-name]]
 ==== `usePathAsTransactionName`
