@@ -82,6 +82,7 @@ var DEFAULTS = {
   sourceLinesErrorLibraryFrames: 5,
   sourceLinesSpanAppFrames: 0,
   sourceLinesSpanLibraryFrames: 0,
+  spanFramesMinDuration: '10ms',
   stackTraceLimit: 50,
   transactionIgnoreUrls: [],
   transactionMaxSpans: 500,
@@ -142,6 +143,7 @@ var ENV_TABLE = {
   sourceLinesErrorLibraryFrames: 'ELASTIC_APM_SOURCE_LINES_ERROR_LIBRARY_FRAMES',
   sourceLinesSpanAppFrames: 'ELASTIC_APM_SOURCE_LINES_SPAN_APP_FRAMES',
   sourceLinesSpanLibraryFrames: 'ELASTIC_APM_SOURCE_LINES_SPAN_LIBRARY_FRAMES',
+  spanFramesMinDuration: 'ELASTIC_APM_SPAN_FRAMES_MIN_DURATION',
   stackTraceLimit: 'ELASTIC_APM_STACK_TRACE_LIMIT',
   transactionIgnoreUrls: 'ELASTIC_APM_TRANSACTION_IGNORE_URLS',
   transactionMaxSpans: 'ELASTIC_APM_TRANSACTION_MAX_SPANS',
@@ -194,7 +196,8 @@ var TIME_OPTS = [
   'abortedErrorThreshold',
   'apiRequestTime',
   'metricsInterval',
-  'serverTimeout'
+  'serverTimeout',
+  'spanFramesMinDuration'
 ]
 
 var BYTES_OPTS = [
