@@ -84,6 +84,7 @@ Object.defineProperty(GenericSpan.prototype, 'traceparent', {
   }
 })
 
+// duration is returned as an int representing the time in milliseconds
 GenericSpan.prototype.duration = function () {
   if (!this.ended) {
     this._agent.logger.debug('tried to call duration() on un-ended transaction/span %o', { id: this.id, parent: this.parentId, trace: this.traceId, name: this.name, type: this.type })
