@@ -35,13 +35,14 @@ function Span (transaction, name, ...args) {
   this._destination = null
   this._message = null
   this._stackObj = null
+  this._capturedStackTrace = null
 
   this.transaction = transaction
   this.name = name || 'unnamed'
 
   this._agent._instrumentation.bindingSpan = this
 
-  if (this._agent._conf.captureSpanStackTraces) {
+  if (this._agent._conf.captureSpanStackTraces && this._agent._conf.spanFramesMinDuration !== 0) {
     this._recordStackTrace()
   }
 
@@ -79,6 +80,28 @@ Span.prototype.end = function (endTime) {
 
   this.ended = true
   this._agent.logger.debug('ended span %o', { span: this.id, parent: this.parentId, trace: this.traceId, name: this.name, type: this.type, subtype: this.subtype, action: this.action })
+
+  // TODO: This is expensive! Consider if there's a way to cache some of this
+  if (this._capturedStackTrace !== null && this._agent._conf.spanFramesMinDuration !== 0 && this.duration() / 1000 > this._agent._conf.spanFramesMinDuration) {
+    // NOTE: This uses a promise-like thing and not a *real* promise
+    // because passing error stacks into a promise context makes it
+    // uncollectable by the garbage collector.
+    this._stackObj = new Value()
+    var self = this
+    stackman.callsites(this._capturedStackTrace, function (err, callsites) {
+      if (err) return self._stackObj.reject(err)
+      if (!TEST) callsites = callsites.filter(filterCallsite)
+
+      var next = afterAll((err, res) => {
+        err ? self._stackObj.reject(err) : self._stackObj.resolve(res)
+      })
+
+      for (const callsite of callsites) {
+        parsers.parseCallsite(callsite, false, self._agent, next())
+      }
+    })
+  }
+
   this._agent._instrumentation.addEndedSpan(this)
   this.transaction._captureBreakdown(this)
 }
@@ -159,28 +182,7 @@ Span.prototype._recordStackTrace = function (obj) {
     obj = {}
     Error.captureStackTrace(obj, Span)
   }
-
-  var self = this
-
-  // NOTE: This uses a promise-like thing and not a *real* promise
-  // because passing error stacks into a promise context makes it
-  // uncollectable by the garbage collector.
-  var stack = new Value()
-  this._stackObj = stack
-
-  // TODO: This is expensive! Consider if there's a way to cache some of this
-  stackman.callsites(obj, function (err, callsites) {
-    if (err) return stack.reject(err)
-    if (!TEST) callsites = callsites.filter(filterCallsite)
-
-    var next = afterAll((err, res) => {
-      err ? stack.reject(err) : stack.resolve(res)
-    })
-
-    for (const callsite of callsites) {
-      parsers.parseCallsite(callsite, false, self._agent, next())
-    }
-  })
+  this._capturedStackTrace = obj
 }
 
 Span.prototype._encode = function (cb) {
