@@ -121,7 +121,7 @@ test('post-defined, post-resolved promise', function (t) {
   })
 })
 
-test('sync/async tracking', function (t) {
+test('sync/async tracking: span ended in same function is sync', function (t) {
   var trans = agent.startTransaction()
   t.strictEqual(trans.sync, true)
 
@@ -136,9 +136,24 @@ test('sync/async tracking', function (t) {
 
   setImmediate(() => {
     t.strictEqual(trans.sync, false)
-    t.strictEqual(span1.sync, false)
     t.strictEqual(span2.sync, true,
       'span2.sync=true later after having ended sync')
+    t.end()
+  })
+})
+
+test('sync/async tracking: span ended across async boundary is not sync', function (t) {
+  var trans = agent.startTransaction()
+  t.strictEqual(trans.sync, true)
+
+  var span1 = agent.startSpan()
+  t.strictEqual(span1.sync, true)
+
+  setImmediate(() => {
+    span1.end()
+    t.strictEqual(trans.sync, false)
+    t.strictEqual(span1.sync, false,
+      'span1.sync=true after having ended sync')
     t.end()
   })
 })
