@@ -5,7 +5,8 @@ var agent = require('../../..').start({
   secretToken: 'test',
   captureExceptions: false,
   metricsInterval: 0,
-  centralConfig: false
+  centralConfig: false,
+  spanFramesMinDuration: -1 // always capture stack traces with spans
 })
 
 var test = require('tape')
