@@ -42,7 +42,8 @@ if (cluster.isMaster) {
 
     t.test('incoming enabled + outgoing enabled', makeTest({
       disableInstrumentations: '',
-      instrumentIncomingHTTPRequests: true
+      instrumentIncomingHTTPRequests: true,
+      captureSpanStackTraces: false
     }, (t, data) => {
       t.strictEqual(data.transactions.length, 2, 'transaction count')
       t.strictEqual(data.spans.length, 1, 'span count')
@@ -69,7 +70,8 @@ if (cluster.isMaster) {
 
     t.test('incoming disabled + outgoing enabled', makeTest({
       disableInstrumentations: '',
-      instrumentIncomingHTTPRequests: false
+      instrumentIncomingHTTPRequests: false,
+      captureSpanStackTraces: false
     }, (t, data) => {
       t.strictEqual(data.transactions.length, 1, 'transaction count')
       t.strictEqual(data.spans.length, 1, 'span count')
